# crabcassonne

./: .gitignore  Cargo.nix  Cargo.nix.orig  Cargo.toml  LICENSE  README.md  default.nix  flake.nix  zvariant.patch
benches/: game_sim.rs
src/: arena.rs  board.rs  bot.rs  coord_map.rs  lib.rs  main.rs  referee.rs  render.rs  render_tile.rs  tile.rs  tilebag.rs
src/bots/: bot.rs  greedy_bot.rs  human_bot.rs  mcts_bot.rs  mod.rs  random_bot.rs  replay_bot.rs  shallow_bot.rs
