[package]
name = "crabcassonne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
eframe = "0.22.0"
egui = "0.22.0"
itertools = "0.11.0"
once_cell = "1.18.0"
rand = "0.8.5"
rustc-hash = "1.1.0"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "game_sim"
harness = false
