[package]
name = "crabcassonne"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
eframe = "0.22.0"
egui = "0.22.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
itertools = "0.11.0"
mimalloc = { version = "0.1.39", default-features = false }
once_cell = "1.18.0"
rand = "0.8.5"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"] }


[[bench]]
name = "game_sim"
harness = false
